[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thread"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "numpy",
    "flask",
    "werkzeug",
]

[tool.black]
line-length = 127

[tool.isort]
profile = "black"
line_length = 127

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "RUF"]
ignore = ["E501", "S101", "S104", "COM812", "ISC001", "INP001", "PTH103", "PTH105", "PTH110", "PTH118", "PTH207", "S603", "T201", "TRY003", "EM101", "EM102", "PLR2004", "NPY002", "UP007", "S108", "PTH202", "PTH204", "DTZ003", "DTZ006", "F841", "PTH120", "PERF401", "B007", "ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.coverage.run]
omit = ["scripts/e2e.py", "create_test_image.py", "config.py", "config-3.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
